# credit-agreement-analyzer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.txt  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
components/chat_bar/: __init__.py  index.html
credit_analyzer/: config.py
credit_analyzer/generation/: __init__.py  citation_building.py  citation_models.py  citation_parsing.py  pdf_export.py  prompts.py  qa_engine.py  query_decomposer.py  query_expansion.py  report_context.py  report_generator.py  report_models.py  report_template.py  response_parser.py
credit_analyzer/knowledge/: __init__.py  concepts.yaml  registry.py  synonyms.yaml
credit_analyzer/llm/: __init__.py  base.py  claude_provider.py  factory.py  internal_provider.py  ollama_provider.py
credit_analyzer/processing/: chunker.py  definitions.py  pdf_extractor.py  section_detector.py
credit_analyzer/retrieval/: __init__.py  bm25_store.py  embedder.py  fusion.py  hybrid_retriever.py  quality_gate.py  query_helpers.py  reranker.py  vector_store.py
credit_analyzer/ui/: __init__.py  chat.py  clipboard.py  definitions_browser.py  definitions_dialog.py  demo_report.py  guide_content.py  guide_dialog.py  report_dialog.py  report_pipeline.py  sidebar.py  theme.py  theme_constants.py  theme_css.py  ui_formatters.py  workflows.py
docs/: BUILD_ORDER.md  CONFIG_REFERENCE.md  DEPLOYMENT.md  MODULE_SPECS.md  PROJECT_PLAN.md  PROMPTS.md  REPORT_TEMPLATE.md  RETRIEVAL_ARCHITECTURE.md  WORKSTATION_SETUP.md
nginx/: nginx.conf
notebooks/: phase1_validation.ipynb  phase2_validation.ipynb  phase3_validation.ipynb  phase4_validation.ipynb
tests/: test_bm25_store.py  test_chunker.py  test_clipboard.py  test_definitions.py  test_definitions_browser.py  test_embedder.py  test_hybrid_retriever.py  test_inline_citations.py  test_knowledge_integration.py  test_knowledge_registry.py  test_llm.py  test_pdf_extractor.py  test_qa_engine.py  test_quality_gate.py  test_query_decomposer.py  test_query_expansion.py  test_report_generator.py  test_report_template.py  test_retrieval_quality.py  test_section_detector.py  test_text_cleaning.py  test_vector_store.py
(+9 files in other folders)
