[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-analyzer"
version = "0.1.0"
description = "Local credit agreement analyzer with LLM-powered Q&A and report generation"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "tiktoken>=0.7.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "ollama>=0.2.0",
    "streamlit>=1.36.0",
    "jinja2>=3.1.0",
    "markdown>=3.6.0",
    "weasyprint>=62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["credit_analyzer*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
