[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-analyzer"
version = "0.1.0"
description = "Local credit agreement analyzer with LLM-powered Q&A and report generation"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "tiktoken>=0.7.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "pandas>=2.2.0",
    "anthropic>=0.49.0",
    "ollama>=0.2.0",
    "streamlit>=1.36.0",
    "python-dotenv>=1.0.1",
    "fpdf2>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.390",
]

[tool.setuptools.packages.find]
include = ["credit_analyzer*"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
exclude = ["tests", "notebooks"]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "pyright>=1.1.390",
]
